--- a/formular/formular.html
+++ b/formular/formular.html
@@ -45,7 +45,7 @@
     <div class="formular-conteiner">
         <div class="formular-left">
             <h1>Napište mi</h1>
-            <form action="formular.php" method="post">
+            <form action="https://formspree.io/f/xnndpjvk" method="POST">
                 <div class="formular-text">
                     <h4>Jméno:</h4> 
                     <input type="text" name="yourname" placeholder="Enter your name" required>
