--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 
                 <a href="./zivot/zivot.html" class="nav-item">Život</a>
                 <div class="nav-underline"></div>
-                <a href="" class="nav-item">Vize</a>
+                <a href="./projekty/projekty.html" class="nav-item">Projekty</a>
                 <div class="nav-underline"></div> 
                 <a href="" class="nav-item">Koníčky</a>
                 <div class="nav-underline"></div>
@@ -178,6 +178,7 @@
 
     <script src="index.js"></script>
     <script src="navbar.js"></script> 
+    
 
 
 </body>
