--- a/zivot/zivot.html
+++ b/zivot/zivot.html
@@ -106,7 +106,7 @@
             <div class="mylife-cont center">
                 <div class="textcont hidden">
                     <h3>Já a sportovní střelba</h3>
-                    <p>Se sportovní střelbou jsem začal v roce 2018 v klubu SSK Březolupy. Jako jsem střílel vzduchovou pušku 30 ran vleže s nejlepším výsledkem 310,6 bodu. Později jsem přešel na disciplíny ve stoje – 40 ran (393,6 bodu) a 60 ran (588,8 bodu). Od 12 let střílím i malorážní pušku, v leže (60 ran) mám nejlepší výsledek 581 bodů. V roce 2024 jsem začal střílet malorážní 3x20 s nejlepším nástřelem 521 bodů a koncem roku 2024 jsem začal střílet za slovenský klub ŠSK Strelecká akadémia Štefana Bumbála.</p>    
+                    <p>Se sportovní střelbou jsem začal v roce 2018 v klubu SSK Březolupy. Jako první jsem začal střílet vzduchovou pušku 30 ran vleže s nejlepším výsledkem 310,6 bodu. Později jsem přešel na disciplíny ve stoje – 40 ran (393,6 bodu) a 60 ran (588,8 bodu). Od 12 let střílím i malorážní pušku, v leže (60 ran) mám nejlepší výsledek 581 bodů. V roce 2024 jsem začal střílet malorážní 3x20 s nejlepším nástřelem 521 bodů a koncem roku 2024 jsem začal střílet za slovenský klub ŠSK Strelecká akadémia Štefana Bumbála.</p>    
                 </div>
             </div>
         </div>
